name:                animate
version:             0.1.0.0
-- synopsis:
-- description:
homepage:
license:              BSD3
license-file:         LICENSE
author:               Jack Royer
maintainer:           Jack Royer
copyright:            (c) 2022 Jack Royer
category:
build-type:           Simple
cabal-version:        >=1.10
extra-source-files:   README.md

executable animate
  hs-source-dirs:     src
  main-is:            Main.hs

  other-modules:
        SudokuIO,
        WFC,
        Rules,
        SudokuTypes

  default-language:   Haskell2010

  build-depends:      base >= 4.7 && < 5,
                      reanimate >= 1.1.3.1,
                      random,
                      array,
                      bytestring,
                      containers,
                      mtl,
                      text,
                      JuicyPixels
